# credential-vault

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  secrets.cmd  secrets.ps1
docs/: architecture.md  business_master_sync_contract.md  expanded_requirements.md  human_interface_inventory.md  inventory_io_test.md  mail_invoice_inventory_seed.md  mail_invoice_processor_integration.md  migration_strategy.md  usage_examples.md
docs/examples/: auth_step_inventory_template.csv  credential_inventory_template.csv  login_check_inventory_template.csv  mail_invoice_processor.local.runtime.template.yaml  mail_invoice_processor.requirements.example.yaml
docs/overrides/: mail_invoice_auth_step_inventory_override.csv  mail_invoice_credential_inventory_override.csv  (+1 more)
handoff/: handoff_2026-03-26_v1.json  handoff_2026-04-02_v1.json  handoff_2026-04-02_v2.json  handoff_2026-04-02_v3.json  handoff_2026-04-02_v4.json  handoff_2026-04-02_v5.json  handoff_2026-04-02_v6.json
scripts/: build_mail_invoice_inventory_seed.py  build_mail_invoice_inventory_workspace.py  build_mail_invoice_io_bundle.py  render_mail_invoice_processor_runtime.ps1  review_mail_invoice_inventory_seed.py  run_mail_invoice_processor_with_vault.ps1
src/credential_vault/: __init__.py  cli.py  (+12 more)
tests/: conftest.py  test_cli.py  test_cli_ensure.py  test_cli_flow.py  test_config.py  test_crypto.py  test_identifiers.py  test_input_form.py  test_inventory_io.py  test_inventory_review.py  test_inventory_seed.py  test_inventory_workspace.py  test_models.py  test_requirements.py  test_template_render.py  test_vault_store.py
(+3 files in other folders)
